# cursor-onboarding-kit

./: .gitmodules  .markdownlint-cli2.yaml  00-START-HERE.md  01-WEEK-ONE-CHECKLIST.md  02-NO-FLUFF-OPERATING-GUIDE.md  03-EXPERIENCED-ENGINEER-LENS-QA.md  04-TIPS-AND-TRICKS-SCORECARD.md  05-AGENT-OPERATOR-PATTERN.md  06-DAY-IN-THE-LIFE-CURSOR-ENGINEER.md  07-CURSOR-TAB-KEY.md  10-WORKFLOW-FOUNDATIONS.md  20-PROMPT-PATTERNS.md  21-DSPY-TERMINOLOGY.md  22-BCG-ENTERPRISE-AGENTS.md  23-FORMAL-VERIFICATION-AGENTS.md  24-PERSONA-ANCHORS.md  25-AGENTS-MD-EFFECTIVENESS.md  26-CURSOR-DEV-KIT.md  27-CURSOR-META-EXTRACTION.md  28-CURSOR-RULE-TRIGGERING.md  29-CURSOR-MODE-TRANSITIONS.md  30-MODEL-SWITCHING-ADVANCED.md  35-INSTRUCTION-FILES-ADVANCED.md  50-MARKDOWN-OPS.md  60-PERSONALIZATION-LOCAL-ONLY-CONFIG.md  70-ROVO-CONTENT-INGEST.md  75-GITHUB-COPILOT-CONFIG-ADVANCED.md  76-OTHER-AGENT-HARNESSES-ADVANCED.md  77-CURSOR-AGENT-CLI-WEB-BOT-ENTERPRISE-ADVANCED.md  78-HOOKS-SKILLS-COMMANDS-SUBAGENTS-ADVANCED.md  79-CURSOR-CONTEXT-FOCUS-30-WAYS.md  80-SAMPLE-PROJECT-LAB.md  81-CURSOR-SHORTCUTS-ADVANCED-FOLLOW-UP.md  82-CURSOR-DEBUG-MODE-10-MISSED-FEATURES.md  82-CURSOR-DEBUG-MODE-UI-AFFORDANCES.md  83-CURSOR-SETTINGS-CONFIG-FIRST.md  90-GLOSSARY-AND-FRONTMATTER.md  95-READING-LIST.md  96-EXTERNAL-EVIDENCE-MAP-2026.md  97-DEVILS-ADVOCATE-ADVERSARIAL-TAKE.md  (+19 more)
workshop-cli/: Cargo.toml
workshop-cli/hooks/: hooks.json  workshop-hook-read.py  workshop-hook-shell.py
workshop-cli/src/: lib.rs  main.rs
workshop-cli/tests/: cli_tests.rs  fuzz_differential.rs  state_transitions.rs
(+252 files in other folders)
